# PhotoOrganiser

./: .gitignore  CMakeLists.txt  build.sh
src/: imagesorter.cpp  imagesorter.hpp  main.cpp
